# aca-jobs

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
docs/: architecture.md  operations.md  release.md
docs/adr/: 0001-job-execution-and-scheduling.md  0002-native-utc-scheduling.md
infra/: README.md  jobs.parameters.json  main.bicep  main.parameters.example.json
infra/observability/: main.bicep  workbook.json
jobs/example-pipeline/: job.json  script.py
jobs/example-pipeline-2/: job.json
jobs/example-report/: job.json  script.py
jobs/sample-pipeline/: job.json
schemas/: job-manifest.schema.json
src/batchjobs_deploy/: __init__.py  compiler.py
src/batchjobs_runner/: __init__.py  overlap.py  runner.py
tests/: test_compiler.py  test_manifests.py  test_observability.py  test_overlap.py  test_runner.py
tools/: batchjobs_compile.py
