[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "container-jobs"
version = "0.1.0"
description = "Runtime and deployment contracts for governed batch jobs"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.23,<2",
    "azure-storage-blob>=12.26,<13",
    "croniter>=6,<7",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.23,<5",
]

[project.scripts]
batchjobs-run = "batchjobs_runner.runner:main"
batchjobs-compile = "batchjobs_deploy.compiler:main"

[tool.setuptools.packages.find]
where = ["src"]
